<resources>
    <string name="app_name">마루</string>
    <string name="app_name_en">MARU</string>
    <string name="app_ad_attribution">광고</string>
    <string name="nav_label_splash">SplashFragment</string>
    <string name="nav_label_intro">IntroFragment</string>
    <string name="nav_label_register">RegisterFragment</string>
    <string name="nav_label_home">HomeFragment</string>
    <string name="nav_label_onboard">OnboardFragment</string>
    <string name="nav_label_tasks">TasksFragment</string>
    <string name="nav_label_more">MoreFragment</string>
    <string name="nav_label_input">InputFragment</string>
    <string name="nav_label_status">StatusFragment</string>
    <string name="nav_label_sort">SortFragment</string>
    <string name="nav_label_order">OrderFragment</string>
    <string name="nav_label_purchase">PurchaseFragment</string>
    <string name="nav_label_present">PresentFragment</string>
    <string name="nav_label_timeline">TimelineFragment</string>
    <string name="nav_label_landmark">LandmarkFragment</string>
    <string name="nav_label_days">DaysFragment</string>
    <string name="nav_label_days_add">DaysAddFragment</string>
    <string name="nav_label_notice">NoticeFragment</string>
    <string name="nav_label_setting">SettingFragment</string>
    <string name="nav_label_notification">NotificationFragment</string>
    <string name="nav_label_edit">EditFragment</string>
    <string name="nav_label_edit_dialog">EditDialogFragment</string>
    <string name="nav_label_terms">TermsFragment</string>
    <string name="nav_label_backup">BackupFragment</string>
    <string name="nav_key_task_id">KEY_TASK_ID</string>
    <string name="play_store_app">market://details?id=%1$s</string>
    <string name="play_store_web">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="front_zero_format">%02d</string>
    <string-array name="task_list">
        <item name="task_item_greeting">상견례</item>
        <item name="task_item_engagement">약혼식</item>
        <item name="task_item_dress">드레스</item>
        <item name="task_item_studio">스튜디오</item>
        <item name="task_item_makeup">메이크업</item>
        <item name="task_item_hall">웨딩홀</item>
        <item name="task_item_snap">본식 스냅</item>
        <item name="task_item_honeymoon">신혼여행</item>
        <item name="task_item_shoes">웨딩슈즈</item>
        <item name="task_item_gift">예단/예물</item>
        <item name="task_item_contribution">폐백/이바지</item>
        <item name="task_item_hanbok">한복</item>
        <item name="task_item_parent_makeup">혼주 메이크업</item>
        <item name="task_item_invitation">청첩장</item>
        <item name="task_item_reward">사회/축가 사례비</item>
        <item name="task_item_living_ware">혼수</item>
        <item name="task_item_house">신혼집</item>
        <item name="task_item_marriage_pledge">혼인신고</item>
    </string-array>
    <string-array name="task_icons">
        <item name="task_icon_greeting">ic_greeting</item>
        <item name="task_icon_engagement">ic_engagement</item>
        <item name="task_icon_dress">ic_dress</item>
        <item name="task_icon_studio">ic_studio</item>
        <item name="task_icon_makeup">ic_makeup</item>
        <item name="task_icon_hall">ic_hall</item>
        <item name="task_icon_snap">ic_snap</item>
        <item name="task_icon_honeymoon">ic_honeymoon</item>
        <item name="task_icon_shoes">ic_shoes</item>
        <item name="task_icon_gift">ic_gift</item>
        <item name="task_icon_contribution">ic_contribution</item>
        <item name="task_icon_hanbok">ic_hanbok</item>
        <item name="task_icon_parent_makeup">ic_parent_makeup</item>
        <item name="task_icon_invitation">ic_invitation</item>
        <item name="task_icon_reward">ic_reward</item>
        <item name="task_icon_living_ware">ic_living_ware</item>
        <item name="task_icon_house">ic_house</item>
        <item name="task_icon_marriage_pledge">ic_marriage_pledge</item>
    </string-array>
    <string-array name="purchase_items">
        <item name="premium">product_premium</item>
    </string-array>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="date">날짜</string>
    <string name="register">등록하기</string>
    <string name="vibrate">진동</string>
    <string name="sound">소리</string>
    <string name="save">저장하기</string>
    <string name="purchase">구매하기</string>
    <string name="backup">백업하기</string>
    <string name="restore">복원하기</string>
    <string name="wedding">결혼식</string>
    <string name="marriage">결혼을</string>
    <string name="expenses">지출</string>
    <string name="congratulations">축하합니다! :)</string>
    <string name="share">공유하기</string>
    <string name="need_sign_in_process">인증이 필요한 서비스입니다.\n로그인 하시겠습니까?</string>
    <string name="active_night_mode">야간모드로 전환하시겠습니까?</string>
    <string name="inactive_night_mode">야간모드를 해제하시겠습니까?</string>
    <string name="send_email">문의하시겠습니까?</string>
    <string name="try_again_later">잠시 후 다시 시도해주세요.</string>
    <string name="success_sign_in">로그인 되었습니다.</string>
    <string name="failure_sign_in">로그인을 실패했습니다.</string>
    <string name="apply_ad_removal_function">광고 제거 기능이 적용되어 있습니다.</string>
    <string name="success_backup">백업 되었습니다.</string>
    <string name="failure_backup">백업을 실패했습니다.</string>
    <string name="success_restore">복원 되었습니다.</string>
    <string name="failure_restore">복원을 실패했습니다.</string>
    <string name="write_review">리뷰를 작성하시겠습니까?</string>
    <string name="thank_you_for_feedback">소중한 의견 감사합니다! (۶•౪•)۶</string>
    <string name="congratulations_on_your_wedding">결혼을 축하합니다! :)</string>
    <string name="save_to_gallery">사진첩에 저장되었습니다.</string>
    <string name="requires_permission">"해당 기능은 권한이 필요합니다."</string>
    <string name="use_after_registering_as_a_member">회원가입 후 이용해 주세요.</string>
    <string name="register_hello">안녕하세요.</string>
    <string name="register_welcome">마루에 오신 것을\n환영합니다.</string>
    <string name="register_start">시작하기</string>
    <string name="register_name">이름</string>
    <string name="register_name_hint">홍길동</string>
    <string name="register_wedding">결혼 예정일</string>
    <string name="register_wedding_hint">%1$s</string>
    <string name="register_budget">예산</string>
    <string name="register_budget_hint">100,000,000</string>
    <string name="register_calculate_budget">0원</string>
    <string name="register_next">다음</string>
    <string name="register_complete">완료</string>
    <string name="menu_dashboard">홈</string>
    <string name="menu_tasks">체크리스트</string>
    <string name="menu_more">더보기</string>
    <string name="menu_edit">편집</string>
    <string name="onboard_next">다음</string>
    <string name="onboard_complete">완료</string>
    <string name="onboard_tasks_subject">차근차근 하나씩.</string>
    <string name="onboard_tasks_content">결혼 준비를 위한\n나만의 체크리스트를 기록하세요.</string>
    <string name="onboard_account_subject">현명한 소비를 도와드려요.</string>
    <string name="onboard_account_content">신랑 지출 금액, 신부 지출 금액을\n등록하고 서로 비교해보세요.</string>
    <string name="onboard_welcome_subject">결혼식까지 D-%1$d.</string>
    <string name="onboard_welcome_content">[마루]와 함께 행복한 결혼 생활을 준비하세요. :)</string>
    <string name="home_greeting">%1$s님, 안녕하세요</string>
    <string name="home_dday_label">결혼식까지</string>
    <string name="home_dday_format">D-%1$d</string>
    <string name="home_dday_today">D-Day</string>
    <string name="home_dday_passed">결혼을 축하합니다</string>
    <string name="home_progress_summary">체크리스트 %1$d/%2$d 완료</string>
    <string name="home_budget_title">예산</string>
    <string name="home_budget_of">/ %1$s</string>
    <string name="home_view_all">전체 보기</string>
    <string name="home_budget_remaining">남은 %1$s</string>
    <string name="home_groom_amount">신랑 %1$s</string>
    <string name="home_bride_amount">신부 %1$s</string>
    <string name="home_remain_title">남은 잔금</string>
    <string name="home_remain_more">외 %1$d건</string>
    <string name="home_remain_paid">%1$s 지불, %2$s 기록</string>
    <string name="home_next_title">다음 준비</string>
    <string name="home_next_task_label">다음 준비 항목</string>
    <string name="home_next_empty_title">모든 준비를 완료했어요</string>
    <string name="home_next_empty_description">체크리스트에서 새로운 항목을 추가해보세요.</string>
    <string name="home_days_title">디데이</string>
    <string name="home_days_add">디데이 등록하기</string>
    <string name="home_welcome_card_name">%1$s님</string>
    <string name="home_welcome_card_greeting">안녕하세요.</string>
    <string name="home_welcome_card_remain">D-%1$d</string>
    <string name="home_welcome_card_verified">인증이 완료된 계정입니다.</string>
    <string name="home_welcome_card_remain2">%1$d일 전</string>
    <string name="home_account_card_title">지출 내역</string>
    <string name="home_account_card_total_accounts">총 지출 금액</string>
    <string name="home_account_card_total_budget">전체 예산</string>
    <string name="home_account_card_total_remain">남은 예산</string>
    <string name="home_account_card_accounts_husband">신랑 지출</string>
    <string name="home_account_card_accounts_wife">신부 지출</string>
    <string name="home_account_card_percent">%1$.0f %%</string>
    <string name="home_task_card_title">체크리스트</string>
    <string name="home_task_card_total_desc">전체</string>
    <string name="home_task_card_progress_desc">진행 중</string>
    <string name="home_task_card_completed_desc">완료됨</string>
    <string name="home_task_card_transaction_title">이번 달</string>
    <string name="home_task_card_activity_title">최근 활동</string>
    <string name="home_task_card_activity_empty">최근 활동 내역이 없어요.</string>
    <string name="home_task_card_next_task">일정</string>
    <string name="home_task_card_complete">완료</string>
    <string name="home_task_card_no_item">진행중인\n항목이\n없어요.</string>
    <string name="home_day_card_title">디데이</string>
    <string name="home_day_card_management_schedule">아직 등록한 디데이가 없어요</string>
    <string name="days_subtitle">결혼식과 우리가 기다리는 날들</string>
    <string name="days_empty_desc">웨딩 촬영이나 청첩장 발송처럼 기다리는 날을 등록하면 홈에서도 바로 보여요.</string>
    <string name="days_display_count">%1$s일</string>
    <string name="tasks_total_desc">전체</string>
    <string name="tasks_progress_desc">진행 중</string>
    <string name="tasks_completed_desc">완료됨</string>
    <string name="tasks_completed_summary">%1$d개 중 %2$d개 완료</string>
    <string name="tasks_row_ready_hint">지출 기록하기</string>
    <string name="tasks_row_remain">잔금 %1$s</string>
    <string name="tasks_row_no_remain">잔금 없음</string>
    <string name="tasks_row_done_date">%1$s 완료</string>
    <string name="tasks_row_skipped">생략</string>
    <string name="tasks_row_complete">완료로 표시</string>
    <string name="tasks_row_undo_complete">완료 해제</string>
    <string name="tasks_add">항목 추가</string>
    <string name="tasks_sort">순서 편집</string>
    <string name="task_empty_progress">진행 중인 체크리스트가 없어요.</string>
    <string name="task_empty_completed">완료 된 체크리스트가 없어요.</string>
    <string name="input_remain_money">잔금</string>
    <string name="input_field_husband">신랑</string>
    <string name="input_field_wife">신부</string>
    <string name="input_total">총 지출</string>
    <string name="input_expense_date">지출일</string>
    <string name="input_memo">메모</string>
    <string name="input_memo_hint">메모를 입력하세요 (선택)</string>
    <string name="input_save">저장하기</string>
    <string name="input_delete_digit">지우기</string>
    <string name="input_auto_complete">잔금이 0원이 되면 완료로 표시</string>
    <string name="input_first_recorded">%1$s 처음 기록</string>
    <string name="input_no_record">아직 기록 없음</string>
    <string name="won">원</string>
    <string name="input_unit_desc">단위 설정</string>
    <string name="input_unit1">+1만</string>
    <string name="input_unit2">+10만</string>
    <string name="input_unit3">+100만</string>
    <string name="input_unit4">+1000만</string>
    <string name="status_message">차근차근 하나씩 준비하세요!</string>
    <string name="more_settings">설정</string>
    <string name="more_contact">문의하기</string>
    <string name="more_notice">공지사항</string>
</resources>