<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="dev.kxxcn.maru.view.intro.IntroViewModel" />

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/intro_motion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/maru_paper"
        app:layoutDescription="@xml/scene_intro">

        <dev.kxxcn.maru.view.custom.MaruTextView
            android:id="@+id/top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_en"
            android:textSize="16sp" />

        <dev.kxxcn.maru.view.custom.MaruTextView
            android:id="@+id/restore_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textColor="@color/maru_ink"
            app:underline="@{@string/restore}" />

        <View
            android:id="@+id/line_view"
            android:layout_width="70dp"
            android:layout_height="1dp"
            android:background="@color/maru_surface_2" />

        <dev.kxxcn.maru.view.custom.MaruTextView
            android:id="@+id/hello_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_hello"
            android:textSize="40sp" />

        <dev.kxxcn.maru.view.custom.MaruTextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            app:bold="@{@string/register_welcome}" />

        <dev.kxxcn.maru.view.custom.MaruTextView
            android:id="@+id/start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/intro_start_button"
            android:gravity="center"
            android:onClick="@{() -> viewModel.start()}"
            android:minHeight="52dp"
            android:paddingStart="32dp"
            android:paddingTop="14dp"
            android:paddingEnd="32dp"
            android:paddingBottom="14dp"
            android:text="@string/register_start"
            android:textColor="@color/maru_on_yellow"
            android:textSize="16sp"
            app:textStyle="bold" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>
